--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,9 @@ project:
   type: website
 
 website:
+  page-navigation: true
   title: "Regulatory R Package Repository"
+  site-url: "https://yannfeat.github.io/regulatory-r-repo-wg/" 
   navbar:
     left:
       - href: index.qmd
@@ -19,6 +21,3 @@ format:
     toc-location: left
 
 editor: visual
-
-execute:
-  freeze: auto
