--- a/.github/workflows/test-val-pipeline.yaml
+++ b/.github/workflows/test-val-pipeline.yaml
@@ -14,4 +14,4 @@ jobs:
       report_pkg_dir: ./tests/packages/buckbeak
       report_template_path: ./tests/packages/buckbeak/validation-template.Rmd
       report_rmarkdown_format: html_document
-      additional_tlmgr_packages: "courier ec""
+      additional_tlmgr_packages: "courier ec"
