--- a/.github/workflows/val-pipeline.yaml
+++ b/.github/workflows/val-pipeline.yaml
@@ -38,6 +38,7 @@ jobs:
       image: rocker/verse:4.1.2
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_ACTION_PATH: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       fail-fast: false
       max-parallel: 2
@@ -70,6 +71,7 @@ jobs:
       image: rocker/verse:4.1.2
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_ACTION_PATH: ${{ secrets.GITHUB_TOKEN }}
       CRAN: https://packagemanager.rstudio.com/cran/__linux__/focal/latest
     strategy:
       fail-fast: false
